--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,3 +19,18 @@ CORS_ORIGIN=http://localhost:3000
 
 # File Encryption (32-byte hex key for AES-256-GCM)
 FILE_ENCRYPTION_KEY=your_32_byte_hex_encryption_key_here_change_in_production
+
+# AI Provider Configuration
+# Options: openai, gemini (default: openai)
+AI_PROVIDER=openai
+
+# OpenAI Configuration
+OPENAI_API_KEY=sk-your_openai_api_key_here
+OPENAI_MODEL=gpt-5-mini
+
+# Google Gemini Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-2.0-flash
+
+# AI Rate Limiting
+AI_RATE_LIMIT_PER_HOUR=50
