--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint app components lib types --ext .ts,.tsx --max-warnings 0"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
@@ -15,7 +15,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "html-to-image": "^1.11.13",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
     "next": "^16.1.6",
@@ -24,8 +24,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.4.0",
-    "xlsx": "^0.18.5"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -33,9 +32,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "minimatch": ">=10.2.1",
+    "ajv": ">=6.14.0"
   }
 }
